Atualizei o texto da seção Sobre

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                 </div>
                 <div class="sobre-texto">
                     <h2>Prazer, Thais Cravo!</h2>
-                    <p>Sou uma nutricionista e educadora fisica apaixonada por guiar meus pacientes e alunos em uma jornada de saúde e bem-estar. Com <strong>pós-graduação em Nutrição Clínica Funcional e especialização em Nutrição Endócrina Metabólica</strong>, meu trabalho é focado no atendimento clínico individualizado.</p>
+                    <p>Sou uma nutricionista e educadora fisica apaixonada por guiar meus pacientes e alunos em uma jornada de saúde e bem-estar. <strong> Menstranda em nutrição e dietética pela Universidade
+                    Europeia do Atlántico.</strong> Com <strong>pós-graduação em Nutrição Clínica Funcional e especialização em Nutrição Endócrina Metabólica</strong>, meu trabalho é focado no atendimento clínico individualizado.</p>
                     <p>Acredito que cada pessoa é única e, por isso, meu foco está no <strong>atendimento humanizado</strong>, na escuta ativa e na empatia para criar um plano alimentar que respeite sua rotina e promova uma relação saudável e prazerosa com a comida. Meu objetivo é promover sua qualidade de vida e bem-estar integral.</p>
 
                     <!-- CAIXA DE CREDENCIAIS (NOVA) -->
@@ -147,6 +148,7 @@
                         <div class="card-slider" data-slider="personal-slider">
                            <div class="card active"><i class="fas fa-clipboard-list"></i><h3>Montagem de Treino Online</h3><p>Receba seu plano de treinos personalizado onde estiver.</p></div>
                            <div class="card"><i class="fas fa-person-running"></i><h3>Personal Trainer Presencial</h3><p>Treinamento individualizado para maximizar seus resultados com segurança.</p></div>
+                           <div class="card"><i class="fas fa-person-running"></i><h3>Personal trainer Wellhub <br /> (Gym pass)</h3><p> Feito para você que tem o wellhub (Gym pass), atendimento on-line rápido e fácil para maximizar seus resultados com segurança.</p></div>
                         </div>
                     </div>
                 </div>
@@ -159,28 +161,79 @@
         </div>
 
 
-        <!-- ========= SEÇÃO DEPOIMENTOS ========= -->
-        <section id="depoimentos">
-            <div class="container">
-                <h2>O que meus pacientes dizem</h2>
-                <div class="slider">
-                    <div class="slide active">
-                        <p class="depoimento-texto">"O acompanhamento foi um divisor de águas na minha vida. Aprendi a comer melhor, sem culpa, e alcancei meus objetivos com saúde!"</p>
-                        <h4 class="depoimento-nome">- Maria S., 34 anos</h4>
-                    </div>
-                    <div class="slide">
-                        <p class="depoimento-texto">" Profissional incrível, atenciosa e competente. O plano alimentar foi super fácil de seguir e adaptado à minha rotina corrida."</p>
-                        <h4 class="depoimento-nome">- João P., 42 anos</h4>
-                    </div>
-                     <div class="slide">
-                        <p class="depoimento-texto">" Consegui melhorar muito meu desempenho nos treinos e minha recuperação muscular. Recomendo demais!"</p>
-                        <h4 class="depoimento-nome">- Ana L., 28 anos</h4>
-                    </div>
-                    <button class="slider-btn prev">&lt;</button>
-                    <button class="slider-btn next">&gt;</button>
-                </div>
+ <!-- ... (código anterior) ... -->
+<!-- ========= SEÇÃO DEPOIMENTOS (COM IMAGENS COMPLETAS) ========= -->
+<section id="depoimentos">
+    <div class="container">
+        <h2>O que meus pacientes dizem</h2>
+        <div class="slider">
+            <!-- DEPOIMENTO 1 -->
+            <!-- Apenas este primeiro tem a classe 'active' -->
+            <div class="slide active">
+                <img src="images/depoimento1.png" alt="Depoimento de paciente 1">
             </div>
-        </section>
+
+            <!-- DEPOIMENTO 2 -->
+            <div class="slide">
+                <img src="images/depoimento2.png" alt="Depoimento de paciente 2">
+            </div>
+
+            <!-- DEPOIMENTO 3 -->
+            <div class="slide">
+                <img src="images/depoimento3.png" alt="Depoimento de paciente 3">
+            </div>
+
+            <!-- DEPOIMENTO 4 -->
+            <div class="slide">
+                <img src="images/depoimento4.png" alt="Depoimento de paciente 4">
+            </div>
+
+            <!-- DEPOIMENTO 5 -->
+            <div class="slide">
+                <img src="images/depoimento5.png" alt="Depoimento de paciente 5">
+            </div>
+
+            <!-- DEPOIMENTO 6 -->
+            <div class="slide">
+                <img src="images/depoimento6.png" alt="Depoimento de paciente 6">
+            </div>
+
+            <!-- DEPOIMENTO 7 -->
+            <div class="slide">
+                <img src="images/depoimento7.png" alt="Depoimento de paciente 6">
+            </div>
+
+            <!-- DEPOIMENTO 8 -->
+            <div class="slide">
+                <img src="images/depoimento8.png" alt="Depoimento de paciente 6">
+            </div>
+
+            <!-- DEPOIMENTO 9 -->
+            <div class="slide">
+                <img src="images/depoimento9.png" alt="Depoimento de paciente 6">
+            </div>
+
+            <!-- DEPOIMENTO 10 -->
+            <div class="slide">
+                <img src="images/depoimento10.png" alt="Depoimento de paciente 6">
+            </div>
+            
+            <button class="slider-btn prev">&lt;</button>
+            <button class="slider-btn next">&gt;</button>
+        </div>
+
+        <!-- Link para ver mais avaliações no Google -->
+        <div class="google-link-wrapper">
+            <a href="https://www.google.com/maps/place/Nutricionista+Thais+Cravo+-+Nutricionista+em+Belo+Horizonte/@-19.9027163,-43.9640501,11z/data=!4m18!1m9!3m8!1s0x46e3bd1da3d8d319:0xe7d0116aeadbadb1!2sNutricionista+Thais+Cravo+-+Nutricionista+em+Belo+Horizonte!8m2!3d-19.9027163!4d-43.9640502!9m1!1b1!16s%2Fg%2F11yp4kxc9y!3m7!1s0x46e3bd1da3d8d319:0xe7d0116aeadbadb1!8m2!3d-19.9027163!4d-43.9640502!9m1!1b1!16s%2Fg%2F11yp4kxc9y?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="google-reviews-link">
+                Todas as avaliações no 
+                <svg viewBox="0 0 512 512" height="20"><path fill="#4285F4" d="M386 209.6c0-14.4-1.6-28.4-4.4-42H260v80h70.2c-3.2 26-14.4 48.4-30.8 63.6v52h67.2c39.6-36.4 62.4-89.2 62.4-153.6z"/><path fill="#34A853" d="M260 416c57.2 0 105.2-18.8 140.4-51.2l-67.2-52c-18.8 12.8-42.8 20.4-73.2 20.4-56.4 0-104-38-121.2-89.2H68v54.4C103.2 373.6 176 416 260 416z"/><path fill="#FBBC05" d="M138.8 234.4c-4.4-13.2-6.8-27.2-6.8-41.6s2.4-28.4 6.8-41.6v-54.4H68C52 128.4 40 160.8 40 196s12 67.6 28 97.2l70.8-58.8z"/><path fill="#EA4335" d="M260 108c31.2 0 58.4 10.8 79.2 30.8l59.6-59.6C365.2 40 317.2 24 260 24 176 24 103.2 66.4 68 129.2l70.8 58.8C156 146 203.6 108 260 108z"/></svg>
+                Google
+            </a>
+        </div>
+    </div>
+</section>
+
+<!-- ... (resto do código) ... -->
 
         <!-- ========= NOVA SEÇÃO PARALLAX ========= -->
         <!-- Use uma de suas imagens que seja mais paisagem/fundo -->
@@ -199,7 +252,8 @@
                 </a>
                 <div class="social-icons">
                     <!-- Altere o '#' para o link do seu perfil -->
-                    <a href="https://www.instagram.com/thaiscravonutripersonal/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/thaiscravonutri/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/thais.cravo3" target="_blank"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.linkedin.com/in/thaiscravo/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
